lintian-brush (0.2) UNRELEASED; urgency=medium

  * Ship documentation files.
  * d/control: Add .git suffix to Vcs-Git field.
  * Reduce chattiness when no changes are being made.
  * Add --verbose option.
  * Fix running of specific fixers.
  * Add missing dependency on python3-dulwich. Closes: #912219

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 28 Oct 2018 15:44:06 +0000

lintian-brush (0.1) experimental; urgency=medium

  * Initial release. (Closes: #911016)
  * Add .git suffix to Vcs-Git field.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 13 Oct 2018 11:21:39 +0100
